ogp画像を設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=RocknRoll+One&family=Rowdies:wght@300&family=Yusei+Magic&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= display_meta_tags(default_meta_tags) %>
   </head>
 
 
