--- a/app/views/explanations/programming.html.erb
+++ b/app/views/explanations/programming.html.erb
@@ -46,6 +46,6 @@
 
 <div class="text-right mr-10">
   <%= link_to 'メモする(準備中)','#', class: 'btn font-rocknroll' %>
-  <%= link_to 'Xでシェア', "https://twitter.com/intent/tweet?text=「#{@word.name}」は「#{@word.furigana}」って言ってみよっと！&hashtags=eigoemon&url=http://localhost:3000#{root_path}", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 texxt-white', target: "_blank" %>
+  <%= link_to 'Xでシェア', "https://twitter.com/intent/tweet?text=「#{@word.name}」は「#{@word.furigana}」って言ってみよっと！&hashtags=eigoemon&url=#{root_url}", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank" %>
   <%= link_to 'もう1問！', quiz_path(Quiz.all.pluck(:id).sample), class: 'btn bg-orange-600 hover:bg-orange-500 font-rocknroll text-white' %>
 </div>
