単語のアクセント位置の色を調整

--- a/app/views/tutorials/quiz_show.html.erb
+++ b/app/views/tutorials/quiz_show.html.erb
@@ -10,11 +10,11 @@
   <div class="flex flex-col justify-center pb-20 items-center">
     <div class="flex flex-col md:flex-row justify-center items-center">
     <% @quiz_choices.shuffle.each_with_index do |choice, index| %>  
-        <% bg_color = index == 0 ? 'bg-blue-500 hover:bg-blue-400' : 'bg-yellow-500 hover:bg-yellow-400' %>
+        <% bg_color = index == 0 ? 'bg-blue-600 hover:bg-blue-400' : 'bg-green-700 hover:bg-green-400' %>
         <div class="w-108 h-48 p-6 mx-6 my-2 <%= bg_color %> rounded shadow-md text-5xl text-center font-yusei flex items-center justify-center mt-10">
           <% parts = choice.parts %>
 
-          <%= link_to quiz_explanation_tutorial_path(id: @quiz.word.id, choice_id: choice.id), method: :get, class: "text-gray-800 text-decoration-none" do %>
+          <%= link_to quiz_explanation_tutorial_path(id: @quiz.word.id, choice_id: choice.id), method: :get, class: "text-gray-700" do %>
             <%= parts[:first_part] %>
             <% if parts[:bold_part] %>
               <strong class="text-black"><%= parts[:bold_part] %></strong>
