--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,82 @@
 <body class="relative min-h-screen">
-  <header class="fixed top-0 w-full"><%= render 'shared/header' %></header>
+  <header class="fixed top-0 w-full z-10"><%= render 'shared/header' %></header>
   <div class="mt-5">
     <%= image_tag("edo2.png", alt: "Top Image") %>
+  </div>
+  <div class="mt-5">
+    <div class="relative flex flex-col items-center max-w-7xl mx-auto bg-orange-100 rounded-xl border-4 border-transparent hover:border-rose-200 pb-60 mb-10">
+      <!-- 小さなカード -->
+      <div class="mt-8 flex items-center justify-center bg-purple-900 py-6 w-44 rounded-2xl h-7">
+        <h2 class="text-white text-2xl font-rocknroll">せつめい</h2>
+      </div>
+
+      <!-- 中央のテキスト部分 -->
+      <div class="mt-8 flex flex-col items-center justify-center">
+        <p class="text-2xl font-yusei">まずは「おためし」ボタンをおして、このwebアプリが何をしようとしているのかを体感してこよう！</p>
+        <p class="mt-2 text-2xl font-yusei">とはいえ事前情報がほしいひとのために、順に説明するよ。</p>
+      </div>
+
+      <!-- 下部の小さなカードと右寄せテキスト -->
+      <div class="mt-20 w-full flex items-start">
+        <!-- 小さなカード -->
+        <div class="ml-24 flex items-center justify-center bg-blue-700 rounded-2xl w-48 h-7 py-6 px-5 mt-3">
+          <h2 class="text-white text-2xl font-rocknroll text-center">がいよう</h2>
+        </div>
+        <!-- 右寄せのテキスト部分 -->
+        <div class="ml-10 flex flex-col items-start justify-center">
+          <p class="text-2xl font-yusei mr-24 py-1">このwebアプリでは<span class="text-rose-800">プログラミング中によく見かける英単語</span> を <span class="text-rose-800">ネイティブっぽく発音する方法</span> が ゆるーく学べるよ。</p>
+          <p class="text-2xl font-yusei mr-24 py-1">なぜ ゆるーく なのかというと、ここでおこなっていることは、<span class="text-rose-800">はつおん記号を使わずに 英単語にひらがなでふりがなをふる </span>という試みだからだよ。</p>
+        </div>
+      </div>
+
+      <!-- 下部の小さなカードと右寄せテキスト -->
+      <div class="mt-24 w-full flex items-start">
+        <!-- 小さなカード -->
+        <div class="ml-24 flex items-center justify-center bg-orange-700 rounded-2xl w-48 h-7 py-6 px-5 mt-3">
+          <h2 class="text-white text-2xl font-rocknroll text-center">もんだい</h2>
+        </div>
+        <!-- 右寄せのテキスト部分 -->
+        <div class="ml-10 flex flex-col items-start justify-center">
+          <p class="text-2xl font-yusei mr-24 py-1">ある英単語に対して、よりネイティブっぽく読めるふりがなはどちらかを当てる2択のクイズが始まるよ。</p>
+          <p class="text-2xl font-yusei mr-24 py-1">解説画面にすすむと、<span class="text-rose-800">会話の中でのその単語の音声 </span>と、その単語が<span class="text-rose-800"> プログラミングではどのように使われているかの解説 </span>を見ることができるよ。</p>
+        </div>
+      </div>
+
+      <!-- 下部の小さなカードと右寄せテキスト -->
+      <div class="mt-24 w-full flex items-start">
+        <!-- 小さなカード -->
+        <div class="ml-24 flex items-center justify-center bg-green-700 rounded-2xl w-44 h-7 py-6 mt-3">
+          <h2 class="text-white text-2xl font-rocknroll">図書館</h2>
+        </div>
+        <!-- 右寄せのテキスト部分 -->
+        <div class="ml-10 flex flex-col items-start justify-center">
+          <p class="text-2xl font-yusei mr-24 py-1">もんだいに使用している英単語を一覧でかくにんすることができるよ。</p>
+          <p class="text-2xl font-yusei mr-24 py-1">詳細画面にすすむと、<span class="text-rose-800">会話の中でのその単語の音声 </span>と、その単語の<span class="text-rose-800">発音にかんする解説 </span>を見ることができるよ。</p>
+          <p class="text-2xl font-yusei mr-24 py-1">※ 図書館コーナーでは、プログラミングにかんする解説は見ることができないよ</p>
+        </div>
+      </div>
+      <p class="text-5xl font-yusei mr-9 mt-10 text-center text-purple-900">せつめいは以上だよ。さっそく遊ぼう！</p>
+
+
+      <!-- 下部の小さなカードと右寄せテキスト -->
+      <div class="w-full flex items-start mt-40">
+        <!-- 小さなカード -->
+        <div class="ml-24 flex items-center justify-center bg-blue-700 rounded-2xl w-40 h-7 py-6 px-3 mt-3">
+          <h2 class="text-white text-2xl font-rocknroll text-center">ほそく</h2>
+        </div>
+        <!-- 右寄せのテキスト部分 -->
+        <div class="ml-10 flex flex-col items-start justify-center">
+          <p class="text-2xl font-yusei mr-24 py-4">ふりがな をふるにあたって、気をつけたことを記載するよ。</p>
+        </div>
+      </div>
+
+      <div class="text-2xl font-yusei mt-5 py-1">
+        <p >ふりがなは発音を完璧に表すものではないよ。</p>
+        <p>例外もあるけれど、基本的には以下のルールに則ってふりがなをふったよ。</p>
+      </div>
+    
+
+
+    </div>
   </div>
 </body>
