TOPのUI、使い方案内完成

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag("edo2.png", alt: "Top Image") %>
   </div>
   <div class="mt-5">
-    <div class="relative flex flex-col items-center max-w-7xl mx-auto bg-orange-100 rounded-xl border-4 border-transparent hover:border-rose-200 pb-60 mb-10">
+    <div class="relative flex flex-col items-center max-w-7xl mx-auto bg-orange-100 rounded-xl border-4 border-transparent hover:border-rose-200 mb-10 pb-52">
       <!-- 小さなカード -->
       <div class="mt-8 flex items-center justify-center bg-purple-900 py-6 w-44 rounded-2xl h-7">
         <h2 class="text-white text-2xl font-rocknroll">せつめい</h2>
@@ -19,7 +19,7 @@
       <!-- 下部の小さなカードと右寄せテキスト -->
       <div class="mt-20 w-full flex items-start">
         <!-- 小さなカード -->
-        <div class="ml-24 flex items-center justify-center bg-blue-700 rounded-2xl w-48 h-7 py-6 px-5 mt-3">
+        <div class="ml-24 flex items-center justify-center bg-blue-700 rounded-2xl w-48 h-7 px-2 py-6 mt-3">
           <h2 class="text-white text-2xl font-rocknroll text-center">がいよう</h2>
         </div>
         <!-- 右寄せのテキスト部分 -->
@@ -32,7 +32,7 @@
       <!-- 下部の小さなカードと右寄せテキスト -->
       <div class="mt-24 w-full flex items-start">
         <!-- 小さなカード -->
-        <div class="ml-24 flex items-center justify-center bg-orange-700 rounded-2xl w-48 h-7 py-6 px-5 mt-3">
+        <div class="ml-24 flex items-center justify-center bg-orange-700 w-48 mt-3 py-6 px-2 rounded-2xl h-7">
           <h2 class="text-white text-2xl font-rocknroll text-center">もんだい</h2>
         </div>
         <!-- 右寄せのテキスト部分 -->
@@ -59,7 +59,7 @@
 
 
       <!-- 下部の小さなカードと右寄せテキスト -->
-      <div class="w-full flex items-start mt-40">
+      <div class="w-full flex items-start mt-44">
         <!-- 小さなカード -->
         <div class="ml-24 flex items-center justify-center bg-blue-700 rounded-2xl w-40 h-7 py-6 px-3 mt-3">
           <h2 class="text-white text-2xl font-rocknroll text-center">ほそく</h2>
@@ -70,9 +70,26 @@
         </div>
       </div>
 
-      <div class="text-2xl font-yusei mt-5 py-1">
+      <div class="text-2xl font-yusei mt-5 mr-10 ml-10">
         <p >ふりがなは発音を完璧に表すものではないよ。</p>
         <p>例外もあるけれど、基本的には以下のルールに則ってふりがなをふったよ。</p>
+        <div class="mt-5 text-gray-950 mr-10 ml-10">
+         <ul class="list-disc py-5">
+           <li class="pt-2">文字の色が濃い部分は その単語を読むときに強調する部分を表しているよ</li>
+           <li class="pt-3">小さい文字で書いた母音（あ・い・う・え・お）は、その音を読む拍数が1拍に満たないことを表すよ</li>
+           <li class="list-none pt-1">かんたんに言うと「ぇあ」は「え」と言った後にめちゃめちゃすばやく「あ」と言うイメージだよ</li>
+           <li class="pt-3">「じ」と「ぢ」は、発音記号にあわせて表記をわけているよ。</li>
+           <li class="list-none pt-1">具体的には、「ʒ（まさつ音）」を「じ」、「dʒ（はさつ音）を「ぢ」と表しているよ</li> 
+           <li class="list-none pt-1">※ 慣れてきたら意識して言い分けてみよう</li>                  
+           <li class="pt-3">どの部分の音を強調するのかを明確にするために、やや大袈裟にふりがなをふっていることがあるよ</li>
+           <li class="list-none pt-1">これは、英単語の場合、母音をいくら長く伸ばして読んでも単語の意味が変わることはないからだよ</li>
+          <li class="list-none pt-1">（日本語だと「おじさん」と「おじいさん」で言葉の意味が変わるけれど、英語にはそのようなことがないよ）</li>
+
+
+
+
+         </ul>
+        </div>
       </div>
     
 
