定期メールのテスト

--- a/app/views/user_mailer/reminder_email.html.erb
+++ b/app/views/user_mailer/reminder_email.html.erb
@@ -1,2 +1,3 @@
-キミはいま江戸時代からのメールを受け取っているダ！歴史的瞬間なんダナ。
+<p>キミはいま江戸時代からのメールを受け取っているダ！歴史的瞬間なんダナ。</p>
+<p>またもんだいを解きにきてほしいダ！</p>
 <p><%= link_to "はつめい屋 英語えもん", root_url %></p>
