--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -70,30 +70,24 @@
         </div>
       </div>
 
-      <div class="text-2xl font-yusei mt-5 mr-10 ml-10">
-        <p >ふりがなは発音を完璧に表すものではないよ。</p>
+      <div class="text-2xl font-yusei mt-5 mr-10 ml-20">
+        <p>ふりがなは発音を完璧に表すものではないよ。</p>
         <p>例外もあるけれど、基本的には以下のルールに則ってふりがなをふったよ。</p>
         <div class="mt-5 text-gray-950 mr-10 ml-10">
          <ul class="list-disc py-5">
            <li class="pt-2">文字の色が濃い部分は その単語を読むときに強調する部分を表しているよ</li>
            <li class="pt-3">小さい文字で書いた母音（あ・い・う・え・お）は、その音を読む拍数が1拍に満たないことを表すよ</li>
-           <li class="list-none pt-1">かんたんに言うと「ぇあ」は「え」と言った後にめちゃめちゃすばやく「あ」と言うイメージだよ</li>
+           <li class="list-none pt-1">たとえば発音記号の「<span class="font-mono">ae</span>」は「ぇあ」と表記しているよ。</li>
+           <li class="list-none pt-1">これは、「え」と言った後に高速で「あ」と言うことで「<span class="font-mono">ae</span>」の音に近づけることを目指しているよ。</li>
+           <li class="list-none pt-1">「r」で始まる英単語には、最初に小さな「う」を添えていることが多いよ。</li> 
+           <li class="list-none pt-1">これは、「う」の口の形をすることで、「r」の音を出しやすくするためだよ。</li>                                                       
            <li class="pt-3">「じ」と「ぢ」は、発音記号にあわせて表記をわけているよ。</li>
            <li class="list-none pt-1">具体的には、「ʒ（まさつ音）」を「じ」、「dʒ（はさつ音）を「ぢ」と表しているよ</li> 
-           <li class="list-none pt-1">※ 慣れてきたら意識して言い分けてみよう</li>                  
+           <li class="list-none pt-1">※ 細かいことは最初は気にせず、慣れてきたら意識して言い分けてみよう</li>                  
            <li class="pt-3">どの部分の音を強調するのかを明確にするために、やや大袈裟にふりがなをふっていることがあるよ</li>
-           <li class="list-none pt-1">これは、英単語の場合、母音をいくら長く伸ばして読んでも単語の意味が変わることはないからだよ</li>
-          <li class="list-none pt-1">（日本語だと「おじさん」と「おじいさん」で言葉の意味が変わるけれど、英語にはそのようなことがないよ）</li>
-
-
-
-
          </ul>
         </div>
       </div>
-    
-
-
     </div>
   </div>
 </body>
