--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <%= display_meta_tags(default_meta_tags) %>
+    <meta name="google-site-verification" content="0PHSccm3wMmn0viU8zme3x8rn_gld42HuE1ZYCvmbcI" />
   </head>
 
 
