--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,35 +1,6 @@
 <%= javascript_include_tag 'level_up' %>
 <%= render 'shared/header' %>
-<body data-quiz-id="<%= @quiz.id %>" class="text-black bg-white">
-  <h1 class="font-bold mt-5 text-6xl text-center pb-5 font-yusei">もんだい！</h1>
-  <p class="mx-auto text-4xl text-center font-rocknroll break-words">どっちのふりがながそれっぽい発音になると思う？</p>
-  <p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ 次のページでは音が出るから気をつけてね</p>
-
-
-  <p class="font-rowdies mx-auto text-8xl text-center mt-8 py-10"><%= @quiz.word.name %></p>
-
-  <div class="flex flex-col justify-center pb-20 items-center">
-    <div class="flex flex-col md:flex-row justify-center items-center">
-    <% @quiz_choices.shuffle.each_with_index do |choice, index| %>  
-        <% bg_color = index == 0 ? 'bg-blue-600 hover:bg-blue-400' : 'bg-green-700 hover:bg-green-400' %>
-        <div class="w-124 h-48 p-6 mx-6 my-2 <%= bg_color %> rounded shadow-md text-5xl text-center font-yusei flex items-center justify-center mt-10">
-          <% parts = choice.parts %>
-
-          <%= link_to programming_explanation_path(id: @quiz.word.id, choice_id: choice.id), method: :get, class: "text-gray-700" do %>
-            <%= parts[:first_part] %>
-            <% if parts[:bold_part] %>
-              <strong class="text-black"><%= parts[:bold_part] %></strong>
-            <% end %>
-            <%= parts[:last_part] %>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-
-  <% if @level_up %>
-    <%= render 'level_up_modal' %>
-  <% end %>
-</body>
-
-
+<%= render 'shared/question', explanation_path: 'programming_explanation_path', quiz: @quiz, quiz_choices: @quiz_choices %>
+<% if @level_up %>
+  <%= render 'level_up_modal' %>
+<% end %>
