--- a/app/views/shared/_question.html.erb
+++ b/app/views/shared/_question.html.erb
@@ -5,19 +5,19 @@
 
 <div class="flex flex-col justify-center pb-20 items-center">
   <div class="flex flex-col md:flex-row justify-center items-center">
-  <% quiz_choices.shuffle.each_with_index do |choice, index| %>  
+    <% quiz_choices.shuffle.each_with_index do |choice, index| %>
       <% bg_color = index == 0 ? 'bg-blue-600 hover:bg-blue-400' : 'bg-green-700 hover:bg-green-400' %>
-      <div class="w-124 h-48 p-6 mx-6 my-2 <%= bg_color %> rounded shadow-md text-5xl text-center font-yusei flex items-center justify-center mt-10">
-        <% parts = choice.parts %>
-
-        <%= link_to send(explanation_path, id: quiz.word.id, choice_id: choice.id), method: :get, class: "text-gray-700" do %>
+      <% link_classes = "w-124 h-48 p-6 mx-6 my-2 #{bg_color} rounded shadow-md text-5xl text-center font-yusei flex items-center justify-center mt-10 text-gray-700" %>
+      <%= link_to send(explanation_path, id: quiz.word.id, choice_id: choice.id), method: :get do %>
+        <%= content_tag :div, class: link_classes do %>
+          <% parts = choice.parts %>
           <%= parts[:first_part] %>
           <% if parts[:bold_part] %>
             <strong class="text-black"><%= parts[:bold_part] %></strong>
           <% end %>
           <%= parts[:last_part] %>
         <% end %>
-      </div>
+      <% end %>
     <% end %>
   </div>
 </div>
