--- a/app/views/explanations/english.html.erb
+++ b/app/views/explanations/english.html.erb
@@ -8,7 +8,7 @@
   <%= render 'shared/youglish', word:@word %>
 </div>
 
-<div class="text-left ml-128">
+<div class="text-left ml-160 mt-5 mb-3">
   <%= link_to 'Xでシェア', "https://twitter.com/intent/tweet?text=「#{@word.name}」は「#{@word.furigana}」って言ってみよっと！&hashtags=eigoemon&url=#{root_url}", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank" %>
   <%= link_to 'もどる', words_path, class: 'btn bg-orange-600 hover:bg-orange-500 text-white font-yusei' %>
 </div>
