--- a/app/views/shared/_youglish.html.erb
+++ b/app/views/shared/_youglish.html.erb
@@ -1,7 +1,7 @@
-<div class="w-full lg:w-1/2 mx-auto lg:mx-0 lg:mr-20 mt-10">
+<div class="w-full lg:w-1/2 mx-auto lg:mx-0 mt-20">
   <div id="youglish-player"></div>
   <div id="youglish-widget" data-word="<%= word.name %>"></div>
-  <div class="ml-32">
+  <div class="ml-48">
     <button id="play-button" class="btn btn-primary">再生</button>
     <button id="pause-button" class="btn btn-secondary">停止</button>
     <button id="next-button" class="btn btn-primary">次の動画</button>
