--- a/app/views/explanations/programming.html.erb
+++ b/app/views/explanations/programming.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <div class="text-left ml-128">
-  <%= link_to 'メモする(準備中)','#', class: 'btn font-rocknroll' %>
+  <%= render 'favorites/favorite_button', word: @word, favorited: @word.favorited_by?(current_user) %>
   <%= link_to 'Xでシェア', "https://twitter.com/intent/tweet?text=「#{@word.name}」は「#{@word.furigana}」って言ってみよっと！&hashtags=eigoemon&url=#{root_url}", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank" %>
   <%= link_to 'もう1問！', quiz_path(Quiz.all.pluck(:id).sample), class: 'btn bg-orange-600 hover:bg-orange-500 text-white font-yusei' %>
 </div>
