--- a/app/views/shared/_english_explanation.html.erb
+++ b/app/views/shared/_english_explanation.html.erb
@@ -10,7 +10,7 @@
     <% end %>
     <%= parts[:last_part] %>
   </div>
-  <p class="font-rowdies mx-auto text-8xl text-left ml-28"><%= @word.name %></p>
+  <p class="font-rowdies mx-auto text-8xl text-left ml-28"><%= word.name %></p>
   <div class="rounded shadow-md text-left bg-blue-900 text-white pt-3 pb-3 mt-14 ml-10 w-72">
     <p class="font-rocknroll text-3xl ml-10">えいごてき解説</p>
   </div>
