--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,11 +18,11 @@
       <li>
         <details>
           <summary class="btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white mr-4 px-8 text-lg">
-            ふくしゅう
+            おもいで
           </summary>
           <ul class="p-2 bg-base-300 text-black text-lg">
-            <li>  <%= link_to 'メモした単語', favorites_path %></li>
-            <li><%= link_to '準備中', '#' %></li>
+            <li><%= link_to 'メモした単語', favorites_path %></li>
+            <li><%= link_to "復習もんだい", review_quiz_path(1) %></li> <!-- ダミーID -->
           </ul>
         </details>
       </li>
