（仮）誤答履歴が古いクイズの取り出しロジック

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,7 +22,7 @@
           </summary>
           <ul class="p-2 bg-base-300 text-black text-lg">
             <li><%= link_to 'メモした単語', favorites_path %></li>
-            <li><%= link_to "復習もんだい", review_quiz_path(1) %></li> <!-- ダミーID -->
+            <li><%= link_to '復習問題', generate_review_quizzes_path %></li>
           </ul>
         </details>
       </li>
