mailerとcontrollerのi18n設定を完了

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.email %> さま</p>
+<p>パスワードリセットの申請を受け付けました。以下のリンクから変更できます。</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p><%= link_to 'パスワードを変更する', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>もしリクエストしていない場合は、このメールを無視してください。</p>
+<p>上記のリンクにアクセスし、新しいパスワードを作成するまで、パスワードは変更されません。</p>
+<p>※リンクの有効期限は1時間です。</p>
