--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -57,8 +57,7 @@
           <p class="text-2xl font-yusei mr-24 py-1">※ 図書館コーナーでは、プログラミングにかんする解説は見ることができないよ</p>
         </div>
       </div>
-      <p class="text-5xl font-yusei mr-9 mt-10 text-center text-purple-900">せつめいは以上だよ。さっそく遊ぼう！</p>
-
+      <p class="text-5xl font-yusei mr-9 mt-10 text-center text-purple-900">あとの細かいことはもう 使いながら学ぼう！</p>
 
       <!-- 下部の小さなカードと右寄せテキスト -->
       <div class="w-full flex items-start mt-44">
