--- a/app/views/shared/_question.html.erb
+++ b/app/views/shared/_question.html.erb
@@ -1,6 +1,6 @@
-<h1 class="font-bold mt-5 text-6xl text-center pb-5 font-yusei">もんだい！</h1>
-<p class="mx-auto text-4xl text-center font-rocknroll break-words">どっちのふりがながそれっぽい発音になると思う？</p>
-<p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ 次のページでは音が出るから気をつけてね</p>
+<h1 class="font-bold mt-5 text-6xl text-center pb-5 font-yusei"><%= t('question.title') %></h1>
+<p class="mx-auto text-4xl text-center font-rocknroll break-words"><%= t('question.which_is_correct?') %></p>
+<p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ <%= t('main.sound_notice') %></p>
 <p class="font-rowdies mx-auto text-8xl text-center mt-8 py-10"><%= quiz.word.name %></p>
 
 <div class="flex flex-col justify-center pb-20 items-center">
