--- a/app/views/shared/_youglish.html.erb
+++ b/app/views/shared/_youglish.html.erb
@@ -2,10 +2,10 @@
   <div id="youglish-player"></div>
   <div id="youglish-widget" data-word="<%= word.name %>"></div>
   <div class="ml-48">
-    <button id="play-button" class="btn btn-primary">再生</button>
-    <button id="pause-button" class="btn btn-secondary">停止</button>
-    <button id="next-button" class="btn btn-primary">次の動画</button>
-    <button id="prev-button" class="btn btn-secondary">前の動画</button>
-    <button id="repeat-button" class="btn btn-secondary">くり返す</button>
+    <button id="play-button" class="btn btn-primary"><%= t('youglish.play') %></button>
+    <button id="pause-button" class="btn btn-secondary"><%= t('youglish.pause') %></button>
+    <button id="next-button" class="btn btn-primary"><%= t('youglish.next') %></button>
+    <button id="prev-button" class="btn btn-secondary"><%= t('youglish.previous') %></button>
+    <button id="repeat-button" class="btn btn-secondary"><%= t('youglish.repeat') %></button>
   </div>
 </div>
