--- a/app/views/tutorials/library_explanation.html.erb
+++ b/app/views/tutorials/library_explanation.html.erb
@@ -9,6 +9,6 @@
 </div>
 
 <div class="text-left ml-160 mt-5 mb-3">
-  <%= link_to 'もどる', library_index_tutorials_path, class: 'btn bg-blue-600 hover:bg-blue-500 font-yusei text-white' %>
-  <%= link_to '会員登録', new_user_registration_path, class: 'btn bg-orange-600 hover:bg-orange-500 text-white mb-3 font-yusei' %>
+  <%= link_to t('defaults.back'), library_index_tutorials_path, class: 'btn bg-blue-600 hover:bg-blue-500 font-yusei text-white' %>
+  <%= link_to t('defaults.kanji_sign_up'), new_user_registration_path, class: 'btn bg-orange-600 hover:bg-orange-500 text-white mb-3 font-yusei' %>
 </div>
