--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,36 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+<header class="op-0 w-full"><%= render 'shared/header' %></header>
+<div class="min-h-screen bg-base-200 flex flex-col justify-center items-center">
+  <div class="text-center mb-6">
+    <h2 class="text-4xl font-yusei"><%= t('defaults.change_your_password') %></h2>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+  <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+    <div class="card-body">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= f.hidden_field :reset_password_token %>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text"><%= f.label :password, t('defaults.new_password') %></span>
+          </label>
+          <% if @minimum_password_length %>
+            <em class="text-xs text-gray-600">(<%= t('defaults.characters_minimum', min: @minimum_password_length) %>)</em>
+          <% end %>
+          <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
 
-<%= render "devise/shared/links" %>
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text"><%= f.label :password_confirmation, t('defaults.confirm_new_password') %></span>
+          </label>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mt-6">
+          <%= f.submit t('defaults.change_my_password'), class: "btn btn-primary" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
