--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Forgot your password?</h2>
+<%= render 'shared/header' %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="min-h-screen bg-base-200 flex flex-col justify-center items-center">
+  <div class="text-center mb-6">
+    <h2 class="text-4xl font-yusei"><%= t('defaults.reset_password') %></h2>
   </div>
+  
+  <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+    <div class="card-body">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text"><%= f.label :email %></span>
+          </label>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mt-6">
+          <%= f.submit t('defaults.send_me_reset_password_instructions'), class: "btn btn-primary" %>
+        </div>
+      <% end %>
+    </div>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
