--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,46 +1,52 @@
 <%= render 'shared/header' %>
-<div class="hero min-h-screen bg-base-200">
-  <div class="hero-content flex-col lg:flex-row-reverse">
-    <div class="text-center lg:text-left">
-      <h1 class="text-5xl font-bold">さいんあっぷ</h1>
-      <p class="py-6 text-green-800"><%= link_to "ログインはこちら", new_user_session_path %></p>
-    </div>
-    <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
-      <div class="card-body">
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
-          <div class="form-control">
-            <label class="label">
-              <span class="label-text"><%= f.label :name %></span>
-            </label>
-            <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "input input-bordered" %>
-          </div>
-          <div class="form-control">
-            <label class="label">
-              <span class="label-text"><%= f.label :email %></span>
-            </label>
-            <%= f.email_field :email, autocomplete: "email", class: "input input-bordered" %>
-          </div>
-          <div class="form-control">
-            <label class="label">
-              <span class="label-text"><%= f.label :password %></span>
-            </label>
-            <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-            <% end %>
-            <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered" %>
-          </div>
-          <div class="form-control">
-            <label class="label">
-              <span class="label-text"><%= f.label :password_confirmation %></span>
-            </label>
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered" %>
-          </div>
-          <div class="form-control mt-6">
-            <%= f.submit "とうろく！", class: "btn btn-primary" %>
-          </div>
-        <% end %>
-      </div>
+
+<div class="min-h-screen bg-base-200 flex flex-col justify-center items-center">
+  <div class="text-center">
+    <h1 class="text-4xl font-yusei  pb-4"><%= t('defaults.sign_up') %></h1>
+    <p class="font-yusei hover:bg-gray-300">（※ <%= link_to t('defaults.here_to_login'), new_user_session_path %>）</p>
+  </div>
+
+  <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100 mt-5">
+    <div class="card-body">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text"><%= f.label :name %></span>
+          </label>
+          <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text"><%= f.label :email %></span>
+          </label>
+          <%= f.email_field :email, autocomplete: "email", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text"><%= f.label :password %></span>
+          </label>
+          <% if @minimum_password_length %>
+            <em class="text-xs text-gray-600">(<%= t('defaults.characters_minimum', min: @minimum_password_length) %>)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text"><%= f.label :password_confirmation %></span>
+          </label>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mt-6">
+          <%= f.submit t('defaults.sign_up'), class: "btn btn-primary" %>
+        </div>
+
+      <% end %>
     </div>
   </div>
 </div>
