--- a/app/views/favorites/_favorite_button.html.erb
+++ b/app/views/favorites/_favorite_button.html.erb
@@ -1,11 +1,11 @@
 <turbo-frame id="favorite_button">
 <% if favorited %>
   <%= link_to word_favorite_path(word), data: {turbo_method: :delete}, class: 'btn font-rocknroll' do %>
-    メモやめる
+    <%= t('main.unnote') %>
   <% end %>
 <% else %>
   <%= link_to word_favorite_path(word), data: {turbo_method: :post}, class: 'btn font-rocknroll' do %>
-    メモする
+    <%= t('main.note') %>
   <% end %>
 <% end %>
 </turbo-frame>
