--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/header' %>
-<p class="mx-auto text-4xl text-center font-rocknroll break-words mt-5">メモした単語いちらん</p>
+<p class="mx-auto text-4xl text-center font-rocknroll break-words mt-5"><%= t('main.noted_words_index') %></p>
 <% if @favorites.present? %>
-  <p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ 次のページでは音が出るから気をつけてね</p>
+  <p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ <%=t('main.sound_notice') %></p>
 <% end %>
 
 <div class="mockup-code mt-36 mx-28 bg-gray-600 text-white p-3 pb-52 mb-20">
@@ -14,6 +14,6 @@
         </div>
       <% end %>
   <% else %>
-    <p class="text-2xl px-3 text-center">まだメモがないよ</p>
+    <p class="text-2xl px-3 text-center"><%= t('main.not_noted')%></p>
   <% end %>
 </div>
