--- a/app/views/review_quizzes/explanation.html.erb
+++ b/app/views/review_quizzes/explanation.html.erb
@@ -12,6 +12,6 @@
 
 <div class="text-left ml-128">
   <%= render 'favorites/favorite_button', word: @word, favorited: @word.favorited_by?(current_user) %>
-  <%= link_to 'Xでシェア', "https://twitter.com/intent/tweet?text=復習した！「#{@word.name}」は「#{@word.furigana}」みたいな感じ！&hashtags=eigoemon&url=#{root_url}", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank" %>
-  <%= link_to 'もっと復習', generate_review_quizzes_path, class: 'btn bg-orange-600 hover:bg-orange-500 text-white font-yusei' %>
+  <%= link_to t('main.share'), "https://twitter.com/intent/tweet?text=復習した！「#{@word.name}」は「#{@word.furigana}」みたいな感じ！&hashtags=eigoemon&url=#{root_url}", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank" %>
+  <%= link_to t('review.next_quiz'), generate_review_quizzes_path, class: 'btn bg-orange-600 hover:bg-orange-500 text-white font-yusei' %>
 </div>
