--- a/app/views/shared/_english_explanation.html.erb
+++ b/app/views/shared/_english_explanation.html.erb
@@ -1,6 +1,6 @@
 <div class="w-full lg:w-1/2 mx-auto lg:mx-0">
   <div class="rounded shadow-md text-left bg-blue-900 text-white ml-10 pt-3 pb-3 mt-16 w-44">
-    <p class="font-rocknroll text-3xl ml-7">よみかた</p>
+    <p class="font-rocknroll text-3xl ml-7"><%= t('main.how_to_say') %></p>
   </div>
   <div class="font-yusei text-5xl text-left ml-28 mt-10 text-gray-700">
     <% parts = word.parts %>
@@ -12,7 +12,7 @@
   </div>
   <p class="font-rowdies mx-auto text-8xl text-left ml-28"><%= word.name %></p>
   <div class="rounded shadow-md text-left bg-blue-900 text-white pt-3 pb-3 mt-14 ml-10 w-72">
-    <p class="font-rocknroll text-3xl ml-10">えいごてき解説</p>
+    <p class="font-rocknroll text-3xl ml-10"><%= t('main.english_explanation') %></p>
   </div>
   <p class="font-yusei text-2xl ml-10 break-words mt-10"><%= word.english_explanation %></p>
 </div>
