--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,28 +1,28 @@
 <div class="navbar bg-yellow-600">
   <div class="flex-1">
-    <%= link_to 'はつめい屋 英語えもん', root_path, class: 'btn bg-rose-900 hover:bg-rose-800 text-white text-xl font-yusei ml-10' %>
+    <%= link_to t('defaults.eigoemon'), root_path, class: 'btn bg-rose-900 hover:bg-rose-800 text-white text-xl font-yusei ml-10' %>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-3 text-xl font-yusei text-base-200">
       <li>
         <% if user_signed_in? %>
           <div class="header-loggedout btn bg-blue-600 hover:bg-blue-500 text-white hover:text-white font-yusei px-8 text-lg mr-5">
-          <%= link_to "START（もんだい）", quiz_path(Quiz.all.pluck(:id).sample) %>
+          <%= link_to t('main.start_quiz'), quiz_path(Quiz.all.pluck(:id).sample) %>
         </div>
       </li>
       <li>
         <div class="header-loggedout btn bg-blue-600 hover:bg-blue-500 text-white hover:text-white font-yusei px-8 text-lg mr-5">
-          <%= link_to "図書館", words_path %>
+          <%= link_to t('main.library'), words_path %>
         </div>
       </li>
       <li>
         <details>
           <summary class="btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white mr-4 px-8 text-lg">
-            おもいで
+            <%= t('main.memories') %>
           </summary>
           <ul class="p-2 bg-base-300 text-black text-lg">
-            <li><%= link_to 'メモした単語', favorites_path %></li>
-            <li><%= link_to '復習問題', generate_review_quizzes_path %></li>
+            <li><%= link_to t('main.noted_words'), favorites_path %></li>
+            <li><%= link_to t('main.review_quizzes'), generate_review_quizzes_path %></li>
           </ul>
         </details>
       </li>
@@ -30,11 +30,11 @@
           <details>
             <summary class="btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white font-yusei px-8 text-lg mr-5"><%= current_user.name %></summary>
             <ul class="p-2 shadow menu dropdown-content z-[1] bg-base-300 rounded-box text-lg">
-              <li class="text-rose-900">ユーザーレベル：<%= current_user.level %></li>
-              <li class="text-black"><%= link_to "ユーザー編集", edit_user_registration_path %></li>
+              <li class="text-rose-900"><%= t('main.user_level') %>：<%= current_user.level %></li>
+              <li class="text-black"><%= link_to t('defaults.edit_user_information'), edit_user_registration_path %></li>
               <li class="text-black">
-                <%= link_to destroy_user_session_path, data: {turbo_method: :delete, status: :see_other, turbo_confirm: "ログアウトしますか？"} do %>
-                  <%= 'ログアウト' %>
+                <%= link_to destroy_user_session_path, data: {turbo_method: :delete, status: :see_other, turbo_confirm: t('defaults.logged_out?')} do %>
+                  <%= t('defaults.logout') %>
                 <% end %>
               </li>
             </ul>
@@ -44,20 +44,20 @@
       <li>
         <details>
           <summary class="btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white mr-4 px-8 text-lg">
-            おためし
+            <%= t('tutorials.title') %>
           </summary>
           <ul class="p-2 bg-base-300 text-black text-lg">
-            <li><%= link_to 'もんだい（3問）', quiz_show_tutorial_path(1) %></li>
-            <li><%= link_to '図書館(3単語)', library_index_tutorials_path %></li>
+            <li><%= link_to t('tutorials.quiz'), quiz_show_tutorial_path(1) %></li>
+            <li><%= link_to t('tutorials.library'), library_index_tutorials_path %></li>
           </ul>
         </details>
       </li>
         <div class="header-loggedout btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white font-yusei px-8 text-lg mr-3">
-          <%= link_to '会員登録', new_user_registration_path %>
+          <%= link_to t('defaults.kanji_sign_up'), new_user_registration_path %>
         </div>
       <li>
         <div class="header-loggedout btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white font-yusei px-8 text-lg mr-5">
-          <%= link_to "ログイン", new_user_session_path %>
+          <%= link_to t('defaults.login'), new_user_session_path %>
         </div>
         <% end %>
       </li>
