--- a/app/views/shared/_programming_explanation.html.erb
+++ b/app/views/shared/_programming_explanation.html.erb
@@ -1,6 +1,6 @@
 <div class="w-full lg:w-1/2 mx-auto lg:mx-0">
   <div class="rounded shadow-md text-left bg-green-900 text-white ml-10 w-40 pt-3 pb-3 mt-16">
-    <p class="font-rocknroll text-3xl ml-10">こたえ</p>
+    <p class="font-rocknroll text-3xl ml-10"><%= t('main.answer') %></p>
   </div>
   <div class="font-yusei text-5xl text-left ml-28 mt-10 text-gray-700">
     <% parts = word.parts %>
@@ -12,7 +12,7 @@
   </div>
   <p class="font-rowdies mx-auto text-8xl text-left ml-28"><%= word.name %></p>
   <div class="rounded shadow-md text-left bg-green-900 text-white pt-3 pb-3 w-96 mt-14 ml-10">
-    <p class="font-rocknroll text-3xl ml-5">プログラミングてき解説</p>
+    <p class="font-rocknroll text-3xl ml-5"><%= t('main.programming_explanation') %></p>
   </div>
   <p class="font-yusei text-2xl ml-10 break-words mt-10"><%= word.programming_explanation %></p>
 </div>
