--- a/app/views/tutorials/quiz_explanation.html.erb
+++ b/app/views/tutorials/quiz_explanation.html.erb
@@ -11,6 +11,6 @@
 </div>
 
 <div class="text-left ml-160 mt-5 mb-3">
-    <%= link_to "次の問題へ", quiz_show_tutorial_path(@quiz), method: :get , class: 'btn bg-blue-600 hover:bg-blue-500 font-yusei text-white' %>
-    <%= link_to '会員登録', new_user_registration_path, class: 'btn bg-orange-600 hover:bg-orange-500 text-white font-yusei' %>
+    <%= link_to t('tutorials.next_quiz'), quiz_show_tutorial_path(@quiz), method: :get , class: 'btn bg-blue-600 hover:bg-blue-500 font-yusei text-white' %>
+    <%= link_to t('defaults.kanji_sign_up'), new_user_registration_path, class: 'btn bg-orange-600 hover:bg-orange-500 text-white font-yusei' %>
 </div>
