--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/header' %>
-<p class="mx-auto text-4xl text-center font-rocknroll break-words mt-5">気になる単語をクリック！</p>
-<p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ 次のページでは音が出るから気をつけてね</p>
+<p class="mx-auto text-4xl text-center font-rocknroll break-words mt-5"><%= t('main.library_announcement') %></p>
+<p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ <%= t('main.sound_notice')%></p>
 
 <div class="mockup-code mt-3 mx-28 bg-gray-600 text-white p-3 pb-52 mb-20">
     <% @words.each do |word| %>
