headerの表示に関する各ビューファイルの修正

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,5 +1,4 @@
-<header class="fixed top-0 w-full"><%= render 'shared/header' %></header>
-<section class="py-5 mt-5 mt-md-4 mb-md-3 mb-lg-4 mb-xl-5 bg-base-200" style="width: 100%; padding-left: 15px; padding-right: 15px;">
+<section class="py-5 mt-5 mt-md-4 mb-md-3 mb-lg-4 mb-xl-5" style="width: 100%; padding-left: 15px; padding-right: 15px;">
   <div class="flex flex-col items-center">
     <div class="p-8 md:w-4/5">
       <h1 class="text-2xl my-16 md:text-center font-bold">プライバシーポリシー</h1>
