--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -11,7 +11,7 @@
 
     <!-- 中央のテキスト部分 -->
     <% unless signed_in? %>
-      <div class="hidden lg:flex flex-col items-center justify-center px-4 mt-8">
+      <div class="flex flex-col items-center justify-center px-4 mt-8">
         <p class="lg:text-2xl font-yusei">まずは「おためし」ボタンをおして、このwebアプリが何をしようとしているのかを体感してこよう！</p>
         <p class="mt-2 lg:text-2xl font-yusei">とはいえ事前情報がほしいひとのために、順に説明するよ。</p>
       </div>
@@ -20,8 +20,10 @@
       <!-- 下部の小さなカードと右寄せテキスト -->
       <div class="mt-20 w-full flex flex-col lg:flex-row items-start">
         <!-- 小さなカード -->
+        <div class="hidden lg:block">
         <div class="flex-shrink-0 mx-auto lg:mx-0 lg:ml-24 flex items-center justify-center bg-blue-700 rounded-2xl w-36 lg:w-48 h-7 py-4 lg:py-6 mt-3">
           <h2 class="text-white text-xl lg:text-2xl font-rocknroll text-center">がいよう</h2>
+        </div>
         </div>
         <!-- 右寄せのテキスト部分 -->
         <div class="mt-4 lg:mt-0 ml-0 lg:ml-10 flex flex-col items-start justify-center px-4 lg:px-0">
