解説ページ全体のレスポンシブ化を完了

--- a/app/views/shared/_youglish.html.erb
+++ b/app/views/shared/_youglish.html.erb
@@ -8,7 +8,7 @@
     <button id="prev-button" class="btn btn-secondary"><%= t('youglish.previous') %></button>
     <button id="repeat-button" class="btn btn-secondary"><%= t('youglish.repeat') %></button>
   </div>
-  <div class="block lg:hidden">
+  <div class="block lg:hidden text-center">
     <button id="play-button" class="btn btn-secondary"><%= t('youglish.play') %></button>
     <button id="pause-button" class="btn btn-primary"><%= t('youglish.pause') %></button>
     <button id="repeat-button" class="btn btn-secondary"><%= t('youglish.repeat') %></button>
