--- a/app/views/tutorials/quiz_explanation.html.erb
+++ b/app/views/tutorials/quiz_explanation.html.erb
@@ -8,7 +8,7 @@
   <%= render 'shared/youglish', word:@word %>
 </div>
 
-<div class="text-left ml-160 mt-5 mb-3">
+<div class="lg:text-left text-center lg:ml-160 mt-5 mb-3">
     <%= link_to t('tutorials.next_quiz'), quiz_show_tutorial_path(@quiz), method: :get , class: 'btn bg-blue-600 hover:bg-blue-500 font-yusei text-white' %>
     <%= link_to t('defaults.kanji_sign_up'), new_user_registration_path, class: 'btn bg-orange-600 hover:bg-orange-500 text-white font-yusei' %>
 </div>
